# clipvid

./: .gitignore  README.md  pyproject.toml
clipvid/: __init__.py  indexing.py  searching.py
